2008-05-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: don't mix xterm control characters and
	UTF-8 output.  (closes: #532932)

2008-05-13 Dodji Seketeli <dodji@gnome.org>

	* modulesets/gnome-external-deps-2.24.modules: updated the version
	  of libxml2 to 2.6.32.

2008-05-13  Richard Hult  <richard@imendio.com>

	* Makefile.plain: Make it possible to build without gettext with
	the plain makefile, bug #532895.

2008-05-11  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* jhbuild/main.py, po/Makefile.plain: use 'jhbuild'
	instead of 'messages' for translation catalog filenames.

2008-05-11  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* po/Makefile.plain: Oops, escape # sign correctly.

2008-05-10  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* po/Makefile.plain: Use grep to remove comment lines
	from LINGUAS file.

2008-05-10  Frederic Peters  <fpeters@0d.be>

	* jhbuild/main.py: removed names parameter of gettext.install, as it is
	only available from Python 2.5.

2008-05-09  Frederic Peters  <fpeters@0d.be>

	* Makefile.plain, jhbuild/utils/packagedb.py, jhbuild/utils/unpack.py,
	jhbuild/utils/httpcache.py, jhbuild/utils/cmds.py,
	jhbuild/commands/autobuild.py, jhbuild/commands/base.py,
	jhbuild/commands/info.py, jhbuild/commands/bootstrap.py,
	jhbuild/commands/tinderbox.py, jhbuild/commands/__init__.py,
	jhbuild/commands/checkbranches.py, jhbuild/commands/gui.py,
	jhbuild/commands/rdepends.py, jhbuild/commands/sanitycheck.py,
	jhbuild/frontends/autobuild.py, jhbuild/frontends/terminal.py,
	jhbuild/frontends/gtkui.py, jhbuild/frontends/buildscript.py,
	jhbuild/modtypes/autotools.py, jhbuild/modtypes/mozillamodule.py,
	jhbuild/modtypes/waf.py, jhbuild/modtypes/__init__.py,
	jhbuild/modtypes/linux.py, jhbuild/modtypes/cmake.py,
	jhbuild/modtypes/perl.py, jhbuild/modtypes/distutils.py,
	jhbuild/modtypes/mesa.py, jhbuild/versioncontrol/cvs.py,
	jhbuild/versioncontrol/darcs.py, jhbuild/versioncontrol/arch.py,