@@ -1,3 +1,9 @@
+2008-05-13  James Sharpe <jsharpe@svn.gnome.org>
+
+	* jhbuild/versioncontrol/git.py: Changed the method used to deal
+	with externals when using git-svn to parse the unhandled.log file
+	in .git/svn/$branch/ (closes #532675)
+
 2008-05-13  Frederic Peters  <fpeters@0d.be>
 
 	* jhbuild/frontends/terminal.py: don't mix xterm control characters and
